# flow-sast-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  USAGE.md  check_tools.py  context_example.md  pyproject.toml  test_sanity.py  tmp-prompt.txt
dummy_repo/: index.php  vuln.py
flow_sast_mcp/: __init__.py  __main__.py  install_mcp.py  server.py
flow_sast_mcp/shared/: __init__.py  findings_writer.py  persistence.py  sink_catalog.py  tool_logger.py
flow_sast_mcp/tools/: __init__.py  api_parser.py  burp.py  catalog_analyzer.py  classifier.py  context_parser.py  fp_filter.py  gitnexus.py  gitnexus_bridge.py  joern.py  repo_intel.py  secrets.py  semgrep.py  triage.py
rules/: csharp_aspnet.yaml  python_unsafe.yaml
skills/: authz_skill.md  availability_skill.md  business_logic_skill.md  cache_protocol_skill.md  client_side_skill.md  deserialize_skill.md  hardcode_skill.md  infosec_skill.md  injection_skill.md  special_skill.md  ssrf_skill.md  system_context_skill.md
test/: run_tool.py
